# HeadCTBloodDetector

./: .gitignore  README.md  apply_finetuned.py  blast.py  cleanup.py  compute_stats.py  convert_to_nifti.py  debug_out.txt  debug_patches.py  finetune.py  finetune_config.json  header_cleanup.py  label_blobs.py  pick_best_ct_head.py  prepare_finetune_data.py  prepare_nnunet_data.py  pyproject.toml  run_blast_mlx.py  run_debug.sh  run_synthstrip.py  synthstrip-docker  test_blast.py  train_nnunet.py
.claude/: settings.local.json
.roam/: index.db
blast-ct/: README.md  setup.py
blast-ct/blast_ct/: mlx_convert.py  mlx_model.py
blast-ct/blast_ct.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blast-ct/blast_ct/nifti/: patch_samplers.py
finetune_data/: summary.txt  train.csv  val.csv
finetune_runs/run_001/: log.txt
finetune_runs/run_001/test/: events.out.tfevents.1771872866.R5275581.530.2  events.out.tfevents.1771890633.BradleyacStudio.50426.2  events.out.tfevents.1771904293.BradleyacStudio.52560.2  events.out.tfevents.1771904851.BradleyacStudio.52811.2  events.out.tfevents.1771905029.BradleyacStudio.52907.2  events.out.tfevents.1771905809.BradleyacStudio.53332.2
finetune_runs/run_001/train/: events.out.tfevents.1771872866.R5275581.530.0  events.out.tfevents.1771890633.BradleyacStudio.50426.0  events.out.tfevents.1771904293.BradleyacStudio.52560.0  events.out.tfevents.1771904851.BradleyacStudio.52811.0  events.out.tfevents.1771905029.BradleyacStudio.52907.0  events.out.tfevents.1771905809.BradleyacStudio.53332.0
(+6 files in other folders)
