[project]
name = "head-ct-blood-detector"
version = "0.1.0"
description = "Head CT blood detection pipeline"
requires-python = ">=3.9"
dependencies = [
    "nibabel",
    "numpy",
    "scipy",
    "mlx",
    "blast-ct",
    "pydicom>=2.4.4",
    "openpyxl>=3.1.5",
    "dicom2nifti>=2.6.0",
    "nnunetv2>=2.5.2",
]

[tool.uv.sources]
blast-ct = { path = "blast-ct" }
